RESOLVED FIXED266113
[WebGPU] ~60 second hang loading https://webgpu.github.io/webgpu-samples/samples/deferredRendering
https://bugs.webkit.org/show_bug.cgi?id=266113
Summary [WebGPU] ~60 second hang loading https://webgpu.github.io/webgpu-samples/samp...
Mike Wyrzykowski
Reported 2023-12-08 16:14:30 PST
(1) Enable WebGPU via the Feature Flags in Safari Preferences (2) Open https://webgpu.github.io/webgpu-samples/samples/deferredRendering (3) Nothing happens for about 10 seconds (4) Content finally loads Regression caused by https://commits.webkit.org/271747@main
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-08 16:15:47 PST
Matt Woodrow
Comment 2 2023-12-10 13:30:47 PST
EWS
Comment 3 2023-12-10 16:19:42 PST
Committed 271854@main (cd96716c74c6): <https://commits.webkit.org/271854@main> Reviewed commits have been landed. Closing PR #21609 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.