60 second hang loading WebGPU samples page. https://bugs.webkit.org/show_bug.cgi?id=266113 <rdar://119406028>

Reviewed by Mike Wyrzykowski.

Front buffer allocation can fail, if the surface dimensions are too big. This test
was trying to allocate a surface 19k high.

We should still notify the signal in this case, since there's no point leaving the
web process waiting arbitrarily. We still don't render any content for that layer,
but that's the existing behaviour.

* Source/WebKit/GPUProcess/graphics/RemoteImageBufferSet.cpp:
(WebKit::RemoteImageBufferSet::flush):

Canonical link: https://commits.webkit.org/271854@main